demo_scripts/tanzubot1/tanzubot1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tanzubot1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tanzubot1
  template:
    metadata:
      labels:
        app: tanzubot1
    spec:
      containers:
        - name: tanzubot1
          image: gcr.io/usecasedev/tanzubot1:0.2
          ports:
            - containerPort: 7860
---
apiVersion: v1
kind: Service
metadata:
  name: tanzubot1-service
spec:
  selector:
    app: tanzubot1
  ports:
    - protocol: TCP
      port: 7860
      targetPort: 7860
