demo_scripts/tanzubot1/tanzubot1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanzubot1-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: tanzubot1.genaissance.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tanzubot1-service
                port:
                  number: 7860
